// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SupportForm /> Should render correctly 1`] = `
.c6 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.5rem;
  font-size: 1.4rem;
  font-weight: normal;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
  box-shadow: none;
}

.c6:focus-visible {
  outline: none !important;
}

.c6:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.75rem;
  pointer-events: none;
}

.c6:focus,
.c6:hover {
  background-color: #004F8C;
  color: white;
  box-shadow: none;
}

.c6:active {
  background-color: #003E6F;
  color: white;
}

.c6:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  width: 1.25rem;
  height: 1.25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px #b2b2bf solid;
  border-radius: 0.5rem;
  background-color: #ffffff;
}

.c1:focus-within,
.c1:focus-visible {
  position: relative;
  outline: none !important;
}

.c1:focus-within::after,
.c1:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.75rem;
  pointer-events: none;
}

.c7 {
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.c2 {
  margin-bottom: 1rem;
  width: 100%;
  box-sizing: border-box;
}

.c0 {
  display: inline-block;
  width: 100%;
  margin: 0 0 0.375rem 0.1rem;
  color: #1e1e1e;
  font-size: 1rem;
  font-weight: bold;
}

.c3 {
  padding: 0.375rem 0.75rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: none;
  outline: none;
  background-color: transparent;
  color: #1e1e1e;
  font-size: 1rem;
}

.c3:disabled {
  color: #b2b2bf;
}

.c5 {
  margin-right: 0.5rem;
  color: #00a698;
  fill: #00a698;
}

@media (prefers-color-scheme:dark) {
  .c6:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #025CA2;
    color: white;
    box-shadow: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:hover {
    background-color: #004479;
    color: white;
    box-shadow: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus-within::after,
  .c1:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    border-color: white;
    background-color: #000000;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c3:disabled {
    color: #7b7b86;
  }
}

<div>
  <form
    class=""
  >
    <div
      aria-hidden="false"
      class=""
    >
      <label
        class="c0"
        for="description_FORM_ID"
      >
        Description
      </label>
      <div
        class="c1 c2"
        placeholder="Description"
      >
        <input
          aria-disabled="false"
          aria-hidden="false"
          aria-invalid="false"
          class="c3"
          id="description_FORM_ID"
          name="Description"
          value=""
        />
        <svg
          class="c4 c5"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-hidden="false"
      class=""
    >
      <label
        class="c0"
        for="url_FORM_ID"
      >
        URL
      </label>
      <div
        class="c1 c2"
        placeholder="URL"
      >
        <input
          aria-disabled="false"
          aria-hidden="false"
          aria-invalid="false"
          class="c3"
          id="url_FORM_ID"
          name="URL"
          value=""
        />
        <svg
          class="c4 c5"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
    </div>
    <button
      class="c6 c7"
      type="button"
    >
      <span
        class="c8"
      >
        Add link
      </span>
    </button>
  </form>
</div>
`;

exports[`<SupportForm /> Should render correctly with no link id 1`] = `
.c6 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.5rem;
  font-size: 1.4rem;
  font-weight: normal;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
  box-shadow: none;
}

.c6:focus-visible {
  outline: none !important;
}

.c6:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.75rem;
  pointer-events: none;
}

.c6:focus,
.c6:hover {
  background-color: #004F8C;
  color: white;
  box-shadow: none;
}

.c6:active {
  background-color: #003E6F;
  color: white;
}

.c6:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  width: 1.25rem;
  height: 1.25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px #b2b2bf solid;
  border-radius: 0.5rem;
  background-color: #ffffff;
}

.c1:focus-within,
.c1:focus-visible {
  position: relative;
  outline: none !important;
}

.c1:focus-within::after,
.c1:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.75rem;
  pointer-events: none;
}

.c7 {
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.c2 {
  margin-bottom: 1rem;
  width: 100%;
  box-sizing: border-box;
}

.c0 {
  display: inline-block;
  width: 100%;
  margin: 0 0 0.375rem 0.1rem;
  color: #1e1e1e;
  font-size: 1rem;
  font-weight: bold;
}

.c3 {
  padding: 0.375rem 0.75rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: none;
  outline: none;
  background-color: transparent;
  color: #1e1e1e;
  font-size: 1rem;
}

.c3:disabled {
  color: #b2b2bf;
}

.c5 {
  margin-right: 0.5rem;
  color: #00a698;
  fill: #00a698;
}

@media (prefers-color-scheme:dark) {
  .c6:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #025CA2;
    color: white;
    box-shadow: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:hover {
    background-color: #004479;
    color: white;
    box-shadow: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus-within::after,
  .c1:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    border-color: white;
    background-color: #000000;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c3:disabled {
    color: #7b7b86;
  }
}

<div>
  <form
    class=""
  >
    <div
      aria-hidden="false"
      class=""
    >
      <label
        class="c0"
        for="name_FORM_ID"
      >
        Name
      </label>
      <div
        class="c1 c2"
        placeholder="Name"
      >
        <input
          aria-disabled="false"
          aria-hidden="false"
          aria-invalid="false"
          class="c3"
          id="name_FORM_ID"
          name="Name"
          value=""
        />
        <svg
          class="c4 c5"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-hidden="false"
      class=""
    >
      <label
        class="c0"
        for="description_FORM_ID"
      >
        Description
      </label>
      <div
        class="c1 c2"
        placeholder="Description"
      >
        <input
          aria-disabled="false"
          aria-hidden="false"
          aria-invalid="false"
          class="c3"
          id="description_FORM_ID"
          name="Description"
          value=""
        />
        <svg
          class="c4 c5"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-hidden="false"
      class=""
    >
      <label
        class="c0"
        for="url_FORM_ID"
      >
        URL
      </label>
      <div
        class="c1 c2"
        placeholder="URL"
      >
        <input
          aria-disabled="false"
          aria-hidden="false"
          aria-invalid="false"
          class="c3"
          id="url_FORM_ID"
          name="URL"
          value=""
        />
        <svg
          class="c4 c5"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
    </div>
    <button
      class="c6 c7"
      type="button"
    >
      <span
        class="c8"
      >
        Add link
      </span>
    </button>
  </form>
</div>
`;
